--- a/style.css
+++ b/style.css
@@ -1,8 +1,48 @@
-#app {
-  font-family: Avenir, Helvetica, Arial, sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  text-align: center;
-  color: #2c3e50;
-  margin-top: 60px;
+html,
+body {
+    margin: 0;
+    padding: 0;
+    height: 100%;
+}
+
+body {
+    background-color: #7f8c8d;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+main {
+    font-family: Avenir, Helvetica, Arial, sans-serif;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+    text-align: center;
+    color: #2c3e50;
+    margin-top: 60px;
+    /* center */
+
+    width: 80%;
+    display: flex;
+    flex-direction: column;
+}
+
+#microphone-wrapper {
+    height: 150px;
+}
+
+#microphone-img {
+    /* margin-top: auto; */
+    /* margin-bottom: 0; */
+    bottom: 0;
+    height: 100px;
+}
+
+#microphone-img:hover {
+    cursor: pointer;
+    height: 110px;
+}
+
+h1 {
+    color: #2ecc71;
 }
